comit array
