# swagger.json
@@ -484,32 +484,36 @@
         "properties": {
           "name": {
             "type": "string",
-            "description": "User's name"
+            "description": "User's name",
+            "example": "Andrey"
           },
           "email": {
             "type": "string",
             "description": "User's email",
+            "example": "qwerty@gmail.com",
             "format": "email"
           },
           "password": {
             "type": "string",
             "description": "User's password",
-            "example": "qwerty123"
+            "example": "123456"
           }
         }
       },
       "LoginRequest": {
         "type": "object",
-        "required": ["name", "email"],
+        "required": ["email", "password"],
         "properties": {
-          "name": {
-            "type": "string",
-            "description": "User's name"
-          },
           "email": {
             "type": "string",
             "description": "User's email",
+            "example": "qwerty@gmail.com",
             "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's password",
+            "example": "123456"
           }
         }
       },
@@ -604,11 +608,13 @@
             "properties": {
               "name": {
                 "type": "string",
-                "description": "User's name"
+                "description": "User's name",
+                "example": "Andrey"
               },
               "email": {
                 "type": "string",
                 "description": "User's email",
+                "example": "qwerty@gmail.com",
                 "format": "email"
               },
               "avatarURL": {
@@ -696,9 +702,71 @@
         "type": "object",
         "properties": {
           "user": {
-            "type": "array",
-            "items": {
-              "typeof": ["string", "integer"]
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "description": "User's name"
+              },
+              "email": {
+                "type": "string",
+                "description": "User's email",
+                "format": "email"
+              },
+              "avatarURL": {
+                "type": "string",
+                "description": "User's foto link",
+                "example": ""
+              },
+              "height": {
+                "type": "integer",
+                "description": "User's height",
+                "example": 150
+              },
+              "currentWeight": {
+                "type": "integer",
+                "description": "User's current weight",
+                "example": 35
+              },
+              "desiredWeight": {
+                "type": "integer",
+                "description": "User's desire weight",
+                "example": 35
+              },
+              "birthday": {
+                "type": "string",
+                "description": "User's birthday",
+                "example": ""
+              },
+              "blood": {
+                "type": "integer",
+                "description": "User's group of blood",
+                "example": 1
+              },
+              "bmr": {
+                "type": "integer",
+                "description": "User's current weight",
+                "example": 0
+              },
+              "dailyPhysicalActivity": {
+                "type": "integer",
+                "description": "User's daily activity",
+                "example": 0
+              },
+              "sex": {
+                "type": "string",
+                "example": "male"
+              },
+              "levelActivity": {
+                "type": "integer",
+                "description": "User's level activity",
+                "example": 1
+              },
+              "_id": {
+                "type": "string",
+                "description": "User's ID",
+                "example": "65af76d4f2af205b90bc8d7a"
+              }
             }
           }
         }
